# ios-moonthread

./: .gitignore  CLAUDE.md  README.md
PeriodTracker/: Local.xcconfig.example
PeriodTracker/PeriodTracker/: ContentView.swift  Info.plist  PeriodTrackerApp.swift
PeriodTracker/PeriodTracker.xcodeproj/: project.pbxproj
PeriodTracker/PeriodTracker.xcodeproj/xcshareddata/xcschemes/: PeriodTracker.xcscheme
PeriodTracker/PeriodTracker/Assets.xcassets/AccentColor.colorset/: Contents.json
PeriodTracker/PeriodTracker/Models/: Period.swift
PeriodTracker/PeriodTracker/Networking/: APIClient.swift  KeychainHelper.swift  PasswordEntryView.swift
PeriodTracker/PeriodTracker/Theme/: ColorTokens.swift  Typography.swift
PeriodTracker/PeriodTracker/ViewModels/: CalendarViewModel.swift  HomeViewModel.swift  LogViewModel.swift  StatsViewModel.swift
PeriodTracker/PeriodTracker/Views/Calendar/: CalendarView.swift  DayCell.swift
PeriodTracker/PeriodTracker/Views/Home/: ActionButton.swift  DatePickerSheet.swift  HomeView.swift  PeriodStatusCard.swift  StalePeriodSheet.swift
PeriodTracker/PeriodTracker/Views/Log/: EditPeriodSheet.swift  LogView.swift  PeriodRow.swift  StatsCard.swift
PeriodTracker/PeriodTracker/Views/Stats/: CycleLengthChart.swift  StatsView.swift  (+4 more)
backend/: Dockerfile  import_periods.py  pyproject.toml
backend/app/: auth.py  config.py  main.py  models.py  schemas.py
backend/app/routes/: periods.py
backend/app/services/: period_service.py
backend/migrations/versions/: 001_create_periods_table.py  002_add_unique_start_date.py  003_add_owner_column.py
